package model.player;

public interface IVMCleaner {
    public EPlayerState getPlayerState();
}
