package view;

public interface IMainWindow {
    void RefreshView();
    void InitWindow();
}
