package view;

import model.player.IVMStudent;

public interface IVStudent {
    public IVMStudent getModelStudent();
    public void draw(IVStudent currentPlayer);
}
