package view;

public interface IVTeacher {
    
}
