package view;

public class VBeer {
    
}
