package view;

public class VMask {
    
}
