package view;

public class VRoom {
    
}
