package view;

public class VStudent implements IVStudent{
    
}
