package view;

public class VTeacher implements IVTeacher{
    
}
