package view;

public class VTransistor {
    
}
